--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
   -->
   <!--Facebook-->
   <meta property="og:title" content="Vector Calulus" />
-  <meta property="og:url" content="" />
-  <meta property="og:description" content="An introduction to Vector Calculus" />
+  <meta property="og:url" content="https://vector-calculus.github.io/" />
+  <meta property="og:description" content="An interactive introduction to Vector Calculus" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Vector Calulus">
 
   <!--Twitter/X-->
   <meta name="twitter:title" content="Vector Calulus" />
-  <meta name="twitter:site" content="" />
-  <meta name="twitter:description" content="An introduction to Vector Calulus" />
+  <meta name="twitter:site" content="https://vector-calculus.github.io/" />
+  <meta name="twitter:description" content="An interactive introduction to Vector Calulus" />
   <meta name="twitter:type" content="website" />
   <meta name="twitter:creator" content="@jcponcemath" />
 
@@ -48,7 +48,7 @@
 
 <body data-type="book" id="top">
 
-  
+
 
   <div class="w3-main w3-large" style="margin-left:250px;">
 
@@ -277,7 +277,7 @@
 </section>
     </div>
 
-   
+    
     <br />
 
     <!-- Footer -->
