--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -16,15 +16,15 @@
   -->
   <!--Facebook-->
   <meta property="og:title" content="Vector Calulus" />
-  <meta property="og:url" content="" />
-  <meta property="og:description" content="An introduction to Vector Calculus" />
+  <meta property="og:url" content="https://vector-calculus.github.io/" />
+  <meta property="og:description" content="An interactive introduction to Vector Calculus" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Vector Calulus">
 
   <!--Twitter/X-->
   <meta name="twitter:title" content="Vector Calulus" />
-  <meta name="twitter:site" content="" />
-  <meta name="twitter:description" content="An introduction to Vector Calulus" />
+  <meta name="twitter:site" content="https://vector-calculus.github.io/" />
+  <meta name="twitter:description" content="An interactive introduction to Vector Calulus" />
   <meta name="twitter:type" content="website" />
   <meta name="twitter:creator" content="@jcponcemath" />
 
@@ -843,11 +843,11 @@
         function $z=f(x,y),$ because this means that for each
         $\left(x_0,y_0\right)\in \R^2$ there must be only one
         $z_0$ with $\left(x_0,y_0,z_0\right)\in S.$ This condition
-        does not hold as you can appreciate in Figure.
+        does not hold as you can appreciate in following Figure.
       </p>
 
       <figure>
-        <img style="width:60%" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/par-surf-01.png">
+        <img style="width:60%" src="imgs/integrals-over-paths-and-surfaces/implicit-surface.png">
 
         <figcaption>
           A surface that is not a graph of a function $z=f(x,y).$
@@ -925,7 +925,7 @@
       <figure>
         <img style="width:60%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/sphere-cartesian.png">
         <figcaption>
-          Surface using $z= \pm \sqrt{2^2-x^2-y^2}.$ <a target="_blank" href="https://www.math3d.org/ip8gC9avC"><i class="fa fa-external-link-alt"></i></a>
+          The sphere using the expressions $z= \pm \sqrt{2^2-x^2-y^2}.$ <a target="_blank" href="https://www.math3d.org/ip8gC9avC"><i class="fa fa-external-link-alt"></i></a>
         </figcaption>
       </figure>
 
@@ -938,7 +938,7 @@
       <figure>
         <img style="width:60%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/sphere-parametric.png">
         <figcaption>
-          Parametric surface. <a target="_blank" href="https://www.math3d.org/FeAjbY5pU"><i class="fa fa-external-link-alt"></i></a>
+          The sphere using a parametrization <a target="_blank" href="https://www.math3d.org/FeAjbY5pU"><i class="fa fa-external-link-alt"></i></a>
         </figcaption>
       </figure>
 
