--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -72,9 +72,12 @@
 
     <a class="w3-bar-item w3-button w3-hide-large w3-large w3-center" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa-solid fa-xmark w3-large"></i></a>
 
+      <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">Vectors and the Geometry of Space</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">Partial Derivatives</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">Vector-Valued Functions</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">Double and Triple Integrals</a>
     <a class="w3-bar-item w3-button" id="chapterBar" href="integrals-over-paths-and-surfaces.html">Integrals Over Paths
       and Surfaces</a>
-
 
     <div class="toc-chapter" id="toc-chapter">
             <a class="w3-bar-item w3-button" href="#section-1">The Path Integral</a>
@@ -83,6 +86,8 @@
             <a class="w3-bar-item w3-button" href="#section-4">Parametrization of
     surfaces</a>
     </div>
+
+    <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">Integration Theorems</a>
 
     <br>
 
@@ -1247,9 +1252,11 @@
     <!-- Navigation -->
 <!-- Buttons to navigate -->
 <div class="w3-container w3-center w3-padding-large section-content"  id="navigation">
-    <a href="index.html"><button
+    <a href="double-and-triple-integrals.html"><button
             class="w3-left w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">&#10094; Previous</button></a>
 
+    <a href="integration-theorems.html"><button
+            class="w3-right w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">Next &#10095;</button></a>
 </div>
     <br />
 
