--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <body data-type="book" id="top">
 
-  
+
 
   <div class="w3-main w3-large" style="margin-left:250px;">
 
@@ -64,11 +64,19 @@
 
         <a class="w3-bar-item w3-button w3-hide-large w3-large w3-center" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa-solid fa-xmark w3-large"></i></a>
 
-            <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">Partial Derivatives</a>
-            <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">Vector-Valued Functions</a>
-            <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">Double and Triple Integrals</a>
-            <a class="w3-bar-item w3-button" id="chapterBar" href="integrals-over-paths-and-surfaces.html">Integrals Over Paths
-              and Surfaces</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">Vectors and the
+                Geometry of Space</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">Partial Derivatives</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">Higher Order Derivatives</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">Vector-Valued Functions</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">Double and Triple
+            Integrals</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">Applications of
+            Integration</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="integrals-over-paths-and-surfaces.html">Integrals Over
+            Paths
+            and Surfaces</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">Integration Theorems</a>
 
         <br>
 
@@ -188,7 +196,35 @@
 
 
             <ol>
+                <li><a href="vectors-and-the-geometry-of-space.html">Vectors and the Geometry of Space</a><picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                  </picture></li>
+                <li><a href="partial-derivatives.html">Partial Derivatives</a><picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                  </picture></li>
+                <li><a href="higher-order-derivatives.html">Higher Order Derivatives</a><picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                  </picture></li>
+                <li><a href="vector-valued-functions.html">Vector-Valued Functions</a><picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                  </picture></li>
+                <li><a href="double-and-triple-integrals.html">Double and Triple Integrals</a><picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                  </picture></li>
+                <li><a href="applications-of-integration.html">Applications of Integration</a><picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                  </picture></li>
                 <li><a href="integrals-over-paths-and-surfaces.html">Integrals Over Paths and Surfaces</a></li>
+                <li><a href="integration-theorems.html">Integration Theorems</a><picture>
+                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                  </picture></li>
             </ol>
 
 
@@ -281,7 +317,7 @@
 </section>
     </div>
 
-   
+    
     <br />
 
     <!-- Footer -->
