--- a/vector-valued-functions.html
+++ b/vector-valued-functions.html
@@ -72,13 +72,18 @@
 
     <a class="w3-bar-item w3-button w3-hide-large w3-large w3-center" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa-solid fa-xmark w3-large"></i></a>
 
-      <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">Vectors and the Geometry of Space</a>
-      <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">Partial Derivatives</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">Vectors and the
+      Geometry of Space</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">Partial Derivatives</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">Higher Order Derivatives</a>
     <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">Vector-Valued Functions</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">Double and Triple Integrals</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">Double and Triple
+      Integrals</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">Applications of
+      Integration</a>
     <a class="w3-bar-item w3-button" id="chapterBar" href="integrals-over-paths-and-surfaces.html">Integrals Over Paths
       and Surfaces</a>
-      <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">Integration Theorems</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">Integration Theorems</a>
 
 
     <br>
@@ -135,7 +140,7 @@
     <div id="section-1">
 
       <div id="path-integral">
-        <h2>Under Construction!</h2> 
+        <h2>Under Construction!</h2>
         <picture>
           <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
           <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="64" height="64">
@@ -149,13 +154,13 @@
           <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="64" height="64">
         </picture>
       </div>
-      
+
       <p>
-        Hi there! Sorry this chapter is still under construction 
+        Hi there! Sorry this chapter is still under construction
         <picture>
           <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
           <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="32" height="32">
-        </picture>! 
+        </picture>!
         In the mean time enjoy this beautiful animation:
       </p>
 
@@ -166,7 +171,7 @@
 
     </div>
 
-    
+
 
 
 
@@ -244,7 +249,7 @@
     <!-- Navigation -->
 <!-- Buttons to navigate -->
 <div class="w3-container w3-center w3-padding-large section-content"  id="navigation">
-    <a href="partial-derivatives.html"><button
+    <a href="higher-order-derivatives.html"><button
             class="w3-left w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">&#10094; Previous</button></a>
 
     <a href="double-and-triple-integrals.html"><button
