--- a/higher-order-derivatives.html
+++ b/higher-order-derivatives.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <title>  Integration Theorems
+  <title>  Higher Order Derivatives
 </title>
 
   <meta charset="UTF-8" />
@@ -64,7 +64,7 @@
 
     <!-- Main DIV Starts here -->
     <div class="container">
-      <section data-type="chapter" id="integration-theorems-vG17s9b">
+      <section data-type="chapter" id="higher-order-derivatives-7NzosnW">
 
   <!-- Sidebar -->
   <nav class="w3-sidebar w3-bar-block w3-collapse w3-card" id="mySidebar">
@@ -113,7 +113,7 @@
       <p>
         <i class="fa-solid fa-bars w3-button w3-hide-large w3-xlarge" onclick="w3_open()"></i>
 
-        <span id="myTitle" class="w3-hide">Integration Theorems</span>
+        <span id="myTitle" class="w3-hide">Higher Order Derivatives</span>
 
         <span title="Dark/Night Mode" id="dark-mode-toggle" class="topDark w3-theme w3-hide-small">
           <i class="fa-regular fa-sun"></i>
@@ -130,7 +130,7 @@
   <!-- Header -->
   <header class="w3-container w3-theme header-section">
 
-    <h1>Integration Theorems</h1>
+    <h1>Higher Order Derivatives</h1>
 
   </header>
 
@@ -161,10 +161,10 @@
           <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
           <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="32" height="32">
         </picture>!
-        In the mean time enjoy this beautiful animation by Steven Wittens:
+        In the mean time enjoy this beautiful animation:
       </p>
 
-      <iframe frameborder="0" height="500px" scrolling="no" src="https://acko.net/files/dark-sunrise/git/" style="border: 1px solid black; overflow: hidden;" width="100%" allowfullscreen="">
+      <iframe frameborder="0" height="500px" scrolling="no" src="https://www.dynamicmath.xyz/threejs/string-space/" style="border: 1px solid black; overflow: hidden;" width="100%">
       </iframe>
 
 
@@ -249,9 +249,11 @@
     <!-- Navigation -->
 <!-- Buttons to navigate -->
 <div class="w3-container w3-center w3-padding-large section-content"  id="navigation">
-    <a href="integrals-over-paths-and-surfaces.html"><button
+    <a href="partial-derivatives.html"><button
             class="w3-left w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">&#10094; Previous</button></a>
 
+    <a href="vector-valued-functions.html"><button
+            class="w3-right w3-button w3-dark-grey w3-round-xlarge w3-hover-shadow ">Next &#10095;</button></a>
 </div>
     <br />
 
