--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                 <div class="w3-hide-large w3-hide-medium w3-hide-small">
                     <h1>Vector Calculus</h1>
                 </div>
-                <h1 class="w3-hide-small text" style="font-size:55px; width: 10em;"><b>𝐕⃗ector Calculus</b></h1>
+                <h1 class="w3-hide-small text" style="font-size:3.5rem; width: 10em;"><b>Vector Calculus</b></h1>
 
-                <h1 class="w3-hide-large w3-hide-medium text" style="font-size:35px"><b>𝐕⃗ector Calculus</b></h1>
+                <h1 class="w3-hide-large w3-hide-medium text" style="font-size:35px"><b>Vector Calculus</b></h1>
 
                 <div class="expanding-bar"></div>
 
