--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     Christopher-Alexander Hermanns, Aarón Reyes,
                     Gabriela Sofia Marin Sanchez, Jerome Siegler,
                     Yashar Shoraka, Jeff Butterworth.
-                </strong>.
+                </strong>
 
                 <br>
                 If you find this project worthwhile, please consider becoming a member in
