--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -72,16 +72,18 @@
 
     <a class="w3-bar-item w3-button w3-hide-large w3-large w3-center" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa-solid fa-xmark w3-large"></i></a>
 
-    <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">Vectors and the
+    <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">1. Vectors and the
       Geometry of Space</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">Partial Derivatives</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">Higher Order Derivatives</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">Vector-Valued Functions</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">Double and Triple
+    <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">2. Partial Derivatives</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">3. Higher Order
+      Derivatives</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">4. Vector-Valued Functions</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">5. Double and Triple
       Integrals</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">Applications of
+    <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">6. Applications of
       Integration</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="integrals-over-paths-and-surfaces.html">Integrals Over Paths
+    <a class="w3-bar-item w3-button" id="chapterBar" href="integrals-over-paths-and-surfaces.html">7. Integrals Over
+      Paths
       and Surfaces</a>
 
     <div class="toc-chapter" id="toc-chapter">
@@ -92,7 +94,7 @@
     surfaces</a>
     </div>
 
-    <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">Integration Theorems</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">8. Integration Theorems</a>
 
     <br>
 
@@ -749,7 +751,7 @@
         vector field is $\F = y~\i + x~\j + 0~\k,$ which has a gradient $f(x,y,z)=xy.$
         Thus
         \[
-        f\big(\c(t)\big)=\left(\frac{t^4}{4}\right)\cdot \sin\left(\frac{t\pi}{2}\right).
+        f\big(\c(t)\big)=\left(\frac{t^4}{4}\right)\cdot \sin^3\left(\frac{t\pi}{2}\right).
         \]
         Therefore
         <div class="eqwrapper">
@@ -857,10 +859,10 @@
       </p>
 
       <figure>
-        <img style="width:60%" src="imgs/integrals-over-paths-and-surfaces/implicit-surface.png">
+        <img style="width:60%" src="imgs/integrals-over-paths-and-surfaces/implicit-surface.jpg">
 
         <figcaption>
-          A surface that is not a graph of a function $z=f(x,y).$
+          A surface that is not a graph of a function $z=f(x,y).$ <a href="https://www.desmos.com/3d/t22vhwcttx" target="_blank"><i class="fa fa-external-link-alt"></i></a>
         </figcaption>
       </figure>
 
@@ -935,7 +937,7 @@
       <figure>
         <img style="width:60%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/sphere-cartesian.png">
         <figcaption>
-          The sphere using the expressions $z= \pm \sqrt{2^2-x^2-y^2}.$ <a target="_blank" href="https://www.math3d.org/ip8gC9avC"><i class="fa fa-external-link-alt"></i></a>
+          Semi-spheres defined by $z= \pm \sqrt{2^2-x^2-y^2}.$ <a target="_blank" href="https://www.math3d.org/ip8gC9avC"><i class="fa fa-external-link-alt"></i></a>
         </figcaption>
       </figure>
 
@@ -1048,9 +1050,9 @@
           GeoGebra code:
         </p>
         <div class="w3-code jsHigh notranslate">
-          Surface(5 cos(θ), 5 sin(θ), z, z, 1, 3, θ, 0, 2 π)
+          Surface(5 cos(θ), 5 sin(θ), z, θ, 0, 2 π, z, 1, 3)
         </div>
-        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-white" href="https://geogebra.org/3d?command=Surface(5*cos(θ),5*sin(θ),z,z,1,3,θ,0,2pi)" target="_blank">
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-white" href="https://geogebra.org/3d?command=Surface(5*cos(θ),5*sin(θ),z,0,2pi,z,1,3,θ)" target="_blank">
           Open 3D graph <i class="fas fa-external-link-alt"></i>
         </a>
 
@@ -1076,9 +1078,9 @@
           GeoGebra code:
         </p>
         <div class="w3-code jsHigh notranslate">
-          Surface(r*cos(π/2), r*sin(π/2), z, r, 1, 3, z, 2, 4)
+          Surface(r*cos(π/2), r*sin(π/2), z, z, 2, 4, r, 0, 1)
         </div>
-        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-white" href="https://geogebra.org/3d?command=Surface(r*cos(pi/2),r*sin(pi/2),z,r,1,3,z,2,4)" target="_blank">
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-white" href="https://geogebra.org/3d?command=Surface(r*cos(pi/2),r*sin(pi/2),z,z,2,4,r,0,1)" target="_blank">
           Open 3D graph <i class="fas fa-external-link-alt"></i>
         </a>
 
