--- a/vector-valued-functions.html
+++ b/vector-valued-functions.html
@@ -72,18 +72,20 @@
 
     <a class="w3-bar-item w3-button w3-hide-large w3-large w3-center" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa-solid fa-xmark w3-large"></i></a>
 
-    <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">Vectors and the
+    <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">1. Vectors and the
       Geometry of Space</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">Partial Derivatives</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">Higher Order Derivatives</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">Vector-Valued Functions</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">Double and Triple
+    <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">2. Partial Derivatives</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">3. Higher Order
+      Derivatives</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">4. Vector-Valued Functions</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">5. Double and Triple
       Integrals</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">Applications of
+    <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">6. Applications of
       Integration</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="integrals-over-paths-and-surfaces.html">Integrals Over Paths
+    <a class="w3-bar-item w3-button" id="chapterBar" href="integrals-over-paths-and-surfaces.html">7. Integrals Over
+      Paths
       and Surfaces</a>
-    <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">Integration Theorems</a>
+    <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">8. Integration Theorems</a>
 
 
     <br>
@@ -156,11 +158,7 @@
       </div>
 
       <p>
-        Hi there! Sorry this chapter is still under construction
-        <picture>
-          <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-          <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="32" height="32">
-        </picture>!
+        Hi there! Sorry this chapter is still under construction 🚧!
         In the mean time enjoy this beautiful animation:
       </p>
 
