--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -862,7 +862,7 @@
         <img style="width:60%" src="imgs/integrals-over-paths-and-surfaces/implicit-surface.jpg">
 
         <figcaption>
-          A surface that is not a graph of a function $z=f(x,y).$ <a href="https://www.desmos.com/3d/t22vhwcttx" target="_blank"><i class="fa fa-external-link-alt"></i></a>
+          A surface that is not a graph of a function $z=f(x,y).$ <a href="https://www.desmos.com/3d/wxj3zjm5de" target="_blank"><i class="fa fa-external-link-alt"></i></a>
         </figcaption>
       </figure>
 
