--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1215,7 +1215,7 @@
       "height": 460,
       "material_id": "r4csvyeq",
       "borderColor": "888888",
-      "playButton": false,
+      "playButton": true,
       "showFullscreenButton": true,
       "enableShiftDragZoom": true,
       "showResetIcon": true
@@ -1226,7 +1226,7 @@
       "height": 452,
       "material_id": "ptz7hgj7",
       "borderColor": "888888",
-      "playButton": false,
+      "playButton": true,
       "showFullscreenButton": true,
       "enableShiftDragZoom": true,
       "showResetIcon": true
