--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -316,7 +316,14 @@
           \end{eqnarray*}
         </div>
         Finally, we must multiply by 2 to obtain total area: $4\pi + \frac{4}{3}.$
+        
       </div>
+
+      <p>
+        The following applets provides a numerical value for path integrals. By default
+        it is set to compute the path integral of planar curves. For curves in the
+        $\R^3$ just unselect the box <strong>Planar curve</strong>.
+      </p>
 
       <figure>
         <div style="display:block;" class="ggbElement" id="ggb-element-calculator"></div>
