--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -320,7 +320,7 @@
       </div>
 
       <p>
-        The following applets provides a numerical value for path integrals. By default
+        The following applet provides a numerical value for path integrals. By default
         it is set to compute the path integral of planar curves. For curves in the
         $\R^3$ just unselect the box <strong>Planar curve</strong>.
       </p>
