--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -352,8 +352,8 @@
       </p>
 
       <p>
-        Now consider a force field $\F(x,y)$ and a piecewiese 
-        continuous smooth curve $C,$ parametrized by 
+        Now consider a force field $\F(x,y)$ and a piecewiese
+        continuous smooth curve $C,$ parametrized by
         the path $\c:[a,b]\to \R^3.$
         We wish to compute the work done by
         this force in moving a particle along this
@@ -363,7 +363,7 @@
       <figure>
         <img style="width: 70%; display: block;" src="https://www.dynamicmath.xyz/math2001/images/chapter-35/chapter-35-work-1.gif">
         <figcaption>
-          The particle moving along $C$ is affected by the 
+          The particle moving along $C$ is affected by the
           vector field.
         </figcaption>
       </figure>
@@ -419,7 +419,7 @@
         \right]\Delta s_i.$
         That is
         \[
-        W = \int_C\F\pd \T~ds
+        W = \int_{\c}\F\pd \T~ds
         \]
         This equation says that <emph>work is the line integral with
           respect to arc length of the tangential component of the force</emph>.
@@ -684,8 +684,61 @@
 
       </div>
 
+      <p>
+        We have introduced the definition of path integrals (integrals
+        of scalar functions) and line integrals (integrals of vector functions)
+        over parametrized curves. Because these integrals are independent
+        of the parametrization (except possibly for the sign), it is natural
+        to express the theory considering curves. But first we need a couple
+        of definitions.
+      </p>
 
-    </div>
+      <div class="definition">
+        A <strong>simple curve</strong> $C$ is the image of a piecewise
+        $C^1$ map $\c: I \to \R^3$ that is one-to-one on an interval $I.$
+        The map $\c$ is called a <strong>parametrization</strong> of $C.$
+        Thus, a simple curve
+        is one that does not intersect itself. If
+        $I = [a, b],$ we call $\c(a)$ and $\c(b)$ endpoints of the curve.
+
+        <p>
+          Every simple curve $C$ has two orientations or 
+          directions associated with it.
+          If $P_1$ and $P_2$ are the endpoints of the curve, 
+          then we can consider
+          $C$ as directed either from 
+          $P_1$ to $P_2$ or from $P_2$ to $P_1.$
+          The simple curve $C$ together with a sense of direction
+          is called an <dtrong>oriented simple curve</dtrong> or 
+          <strong>directed simple curve</strong>.
+        </p>
+      </div>
+
+      <div class="definition">
+        A <strong>simple closed curve</strong> is the image 
+        of a piecewise $C^1$ map $\c:[a,b]\to \R^3$ that is one-to-one 
+        on $[a,b)$ and satisfies $\c(a) = \c(b).$ If $\c$ satisfies 
+        the condition $\c(a) = \c(b),$ but is not necessarily one-to-one 
+        on $[a, b),$ we call its image a <strong>closed curve. 
+        Simple closed curves have two orientations, 
+        corresponding to the two 
+        possible directions of motion along the curve.
+      </strong></div><strong>
+
+      <p>
+        Since $C$ is either an oriented simple curve or an 
+        oriented simple closed curve, line integrals along 
+        it can be defined unambiguously:
+      </p>
+      <div class="eqwrapper">
+        \begin{eqnarray*}
+        \int_C \F \pd d\s = \int_{\c}\pd d\s \quad \text{and}\quad \int_C f~ds \int_{\c}f~ds,
+        \end{eqnarray*}
+        where $\c$ is any orientatio-reserving parametrization of $C.$
+      </div>
+
+
+    </strong></div><strong>
 
     <hr>
 
@@ -1198,7 +1251,7 @@
 
 
 
-  </div>
+  </strong></div><strong>
   <!-- Ends main content -->
 
 
@@ -1283,7 +1336,7 @@
     appletAreaFence.setPreviewImage(previewAreaFence, ggbLogo, playButton);
   </script>
 
-</section>
+</strong></section>
     </div>
 
     <!-- Navigation -->
