--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -719,11 +719,11 @@
         of a piecewise $C^1$ map $\c:[a,b]\to \R^3$ that is one-to-one 
         on $[a,b)$ and satisfies $\c(a) = \c(b).$ If $\c$ satisfies 
         the condition $\c(a) = \c(b),$ but is not necessarily one-to-one 
-        on $[a, b),$ we call its image a <strong>closed curve. 
+        on $[a, b),$ we call its image a <strong>closed curve</strong>. 
         Simple closed curves have two orientations, 
         corresponding to the two 
         possible directions of motion along the curve.
-      </strong></div><strong>
+      </div>
 
       <p>
         Since $C$ is either an oriented simple curve or an 
@@ -738,7 +738,7 @@
       </div>
 
 
-    </strong></div><strong>
+    </div>
 
     <hr>
 
@@ -1251,7 +1251,7 @@
 
 
 
-  </strong></div><strong>
+  </div>
   <!-- Ends main content -->
 
 
@@ -1336,7 +1336,7 @@
     appletAreaFence.setPreviewImage(previewAreaFence, ggbLogo, playButton);
   </script>
 
-</strong></section>
+</section>
     </div>
 
     <!-- Navigation -->
