--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -732,7 +732,7 @@
       </p>
       <div class="eqwrapper">
         \begin{eqnarray*}
-        \int_C \F \pd d\s = \int_{\c}\pd d\s \quad \text{and}\quad \int_C f~ds \int_{\c}f~ds,
+        \int_C \F \pd d\s = \int_{\c}\F \pd d\s \quad \text{and}\quad \int_C f~ds =  \int_{\c}f~ds,
         \end{eqnarray*}
         where $\c$ is any orientatio-reserving parametrization of $C.$
       </div>
