--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -693,46 +693,85 @@
         of definitions.
       </p>
 
-      <div class="definition">
+
+      <p>
         A <strong>simple curve</strong> $C$ is the image of a piecewise
         $C^1$ map $\c: I \to \R^3$ that is one-to-one on an interval $I.$
         The map $\c$ is called a <strong>parametrization</strong> of $C.$
         Thus, a simple curve
         is one that does not intersect itself. If
         $I = [a, b],$ we call $\c(a)$ and $\c(b)$ endpoints of the curve.
+      </p>
 
-        <p>
-          Every simple curve $C$ has two orientations or 
-          directions associated with it.
-          If $P_1$ and $P_2$ are the endpoints of the curve, 
-          then we can consider
-          $C$ as directed either from 
-          $P_1$ to $P_2$ or from $P_2$ to $P_1.$
-          The simple curve $C$ together with a sense of direction
-          is called an <dtrong>oriented simple curve</dtrong> or 
-          <strong>directed simple curve</strong>.
-        </p>
+      <div class="figure-container">
+        <figure>
+          <img style="width:100%" src="imgs/integrals-over-paths-and-surfaces/simple-curve.svg">
+          <figcaption>
+            Simple curve.
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img style="width:100%" src="imgs/integrals-over-paths-and-surfaces/not-simple-curve.svg">
+          <figcaption>
+            Not simple curve.
+          </figcaption>
+        </figure>
       </div>
 
-      <div class="definition">
-        A <strong>simple closed curve</strong> is the image 
-        of a piecewise $C^1$ map $\c:[a,b]\to \R^3$ that is one-to-one 
-        on $[a,b)$ and satisfies $\c(a) = \c(b).$ If $\c$ satisfies 
-        the condition $\c(a) = \c(b),$ but is not necessarily one-to-one 
-        on $[a, b),$ we call its image a <strong>closed curve</strong>. 
-        Simple closed curves have two orientations, 
-        corresponding to the two 
-        possible directions of motion along the curve.
+
+
+      <p>
+        Every simple curve $C$ has two orientations or
+        directions associated with it.
+        If $P_1$ and $P_2$ are the endpoints of the curve,
+        then we can consider
+        $C$ as directed either from
+        $P_1$ to $P_2$ or from $P_2$ to $P_1.$
+        The simple curve $C$ together with a sense of direction
+        is called an <strong>oriented simple curve</strong> or
+        <strong>directed simple curve</strong>.
+      </p>
+
+
+      <p>
+        A <strong>simple closed curve</strong> is the image
+        of a piecewise $C^1$ map $\c:[a,b]\to \R^3$ that is one-to-one
+        on $[a,b)$ and satisfies $\c(a) = \c(b).$ If $\c$ satisfies
+        the condition $\c(a) = \c(b),$ but is not necessarily one-to-one
+        on $[a, b),$ we call its image a <strong>closed curve</strong>.
+      </p>
+
+      <div class="figure-container">
+        <figure>
+          <img style="width:100%" src="imgs/integrals-over-paths-and-surfaces/closed-simple-curve.svg">
+          <figcaption>
+            Simple curve.
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img style="width:100%" src="imgs/integrals-over-paths-and-surfaces/closed-not-simple-curve.svg">
+          <figcaption>
+            Not simple curve.
+          </figcaption>
+        </figure>
       </div>
 
       <p>
-        Since $C$ is either an oriented simple curve or an 
-        oriented simple closed curve, line integrals along 
+        Simple closed curves have two orientations,
+        corresponding to the two
+        possible directions of motion along the curve.
+      </p>
+
+      <p>
+        Since $C$ is either an oriented simple curve or an
+        oriented simple closed curve, line integrals along
         it can be defined unambiguously:
       </p>
       <div class="eqwrapper">
         \begin{eqnarray*}
-        \int_C \F \pd d\s = \int_{\c}\F \pd d\s \quad \text{and}\quad \int_C f~ds =  \int_{\c}f~ds,
+        \int_C \F \pd d\s = \int_{\c}\F \pd d\s \quad \text{and}\quad \int_C f~ds = \int_{\c}f~ds,
         \end{eqnarray*}
         where $\c$ is any orientatio-reserving parametrization of $C.$
       </div>
