--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -2278,7 +2278,8 @@
           But $\r_z\times\r_{\theta} $ is directed inward! 😥
         </p>
 
-        <p>No problem! 😃 Just take $\r_{\theta}\times\r_z = \cos \theta ~\i + \sin \theta ~\j,$
+        <p>Actually, there is no problem! 😃 Just take 
+          $\r_{\theta}\times\r_z = \cos \theta ~\i + \sin \theta ~\j,$
           which directs outward, with the same direction as $\n_1.$
         </p>
 
@@ -2335,7 +2336,7 @@
         <div class="eqwrapper">
           \begin{eqnarray*}
           \iint_{S_2} \F\pd \n_2~ dS &amp;=&amp; \iint_{x^2+y^2\leq 1} \F(\r(x,y))\pd \left(\r_{x}\times\r_y\right) dx~dy\\
-          &amp;=&amp; = 0.
+          &amp;=&amp;  0.
           \end{eqnarray*}
         </div>
 
