--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1135,7 +1135,9 @@
       <p>
         We can obtain a better picture
         with a computer using the parametrization:
-        $\r= 2 \cos u \sin v~\i + 2 \sin u \sin v ~\j + 2\cos v.$
+        \[
+        \r= 2 \cos u \sin v~\i + 2 \sin u \sin v ~\j + 2\cos v.
+        \]
       </p>
 
       <figure>
@@ -1370,7 +1372,7 @@
       </div>
 
       <p>
-        Let $S$ be a surface parametrised by
+        Let $S$ be a surface parametrized by
         $$
         \r(u,v) = x(u,v)~\i+y(u,v)~\j+z(u,v)~\k.
         $$
@@ -1393,7 +1395,7 @@
       </figure>
 
       <p>
-        Setting $u=a$ defines a curve on $S$ parametrised by $\r(a,v)$, for all values
+        Setting $u=a$ defines a curve on $S$ parametrized by $\r(a,v)$, for all values
         of $v$ such that $(a,v)$ lies in $D$.
         A tangent vector to this curve at $P$ is
         \[
@@ -1404,7 +1406,7 @@
 
 
       <p>
-        Similarly setting $v=b$ defines another curve on $S$ parametrised by $\r(u,b)$.
+        Similarly setting $v=b$ defines another curve on $S$ parametrized by $\r(u,b)$.
 
         A tangent vector to this curve at $P$ is
         \[
@@ -1536,6 +1538,20 @@
           Math3d <i class="fas fa-external-link-alt"></i>
         </a>
 
+      </div>
+
+      <p>
+        There is a great variety of parametric surfaces you can explore, or that you can create:
+      </p>
+
+      
+
+      <div style="text-align: center;">
+        <iframe loading="lazy" width="100%" height="270px" scrolling="no" style="border: 0px solid black; overflow: hidden; margin-top: 10px;" src="applets/threejs/parametric-surface-preview"></iframe>
+        <br>
+        <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="http://www.3d-meier.de/tut3/Seite0.html" target="_blank">
+          Parametrische Flächen und Körper <i class="fas fa-external-link-alt"></i>
+        </a>
       </div>
 
       <br>
@@ -2082,7 +2098,7 @@
       <p>
         For a vector field $\v(x, y, z),$ we are interested in the
         flux of $\v$ across a smooth orientable parametric surface $S$
-        in $\R^3,$ parametrised by $\r(u,v),$ with $u$ and $v$ defined
+        in $\R^3,$ parametrized by $\r(u,v),$ with $u$ and $v$ defined
         over some domain $D.$
       </p>
       <p>
@@ -2249,16 +2265,15 @@
           determined by the velocity field $\F(x,y,z)= z~\i+y~\j+x~\k.$
         </p>
 
-        <!--<div style="text-align: center;">
-          <iframe loading="lazy" width="70%" height="500px" scrolling="no"
-        style="border: 1px solid black; overflow: hidden; margin-top: 10px;" 
-        src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
-        <br/>
-         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey"
-          href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
+        <div style="text-align: center;">
+          <iframe loading="lazy" width="70%" height="500px" scrolling="no" style="border: 1px solid black; overflow: hidden; margin-top: 10px;" src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
+        <br>
+         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
           Fullscreen <i class="fas fa-external-link-alt"></i>
           </a>
-        </div>-->
+        </div>
+
+        <!---->
 
         <p>
           To find the net outward flux we need to evaluate the following integral:
@@ -2276,7 +2291,7 @@
           \]
         </p>
         <p>
-          On $S_1$: We can use the parametrisation of the cylinder.
+          On $S_1$: We can use the parametrization of the cylinder.
           \[
           \r(\theta, z) = \cos \theta ~\i+ \sin \theta ~\j + z~\k.
           \]
@@ -2328,7 +2343,7 @@
 
         <p>
           Now, on $S_2$: In this case we have a disk on the plane $z=2.$
-          Then, a parametrisation is
+          Then, a parametrization is
           given by
           \[
           \r(x,y) = x ~\i+ y ~\j + 2~\k, \quad x^2+y^2\leq 1.
@@ -2365,7 +2380,7 @@
 
         <p>
           Finally, on $S_3$: Finally, we have another disk on the plane $z=0$ ($xy$-plane).
-          Then, a parametrisation is
+          Then, a parametrization is
           given by
           \[
           \r(x,z) = x ~\i+ y ~\j + 0~\k, \quad x^2+y^2\leq 1.
